# mamba

./: .clang-tidy  .gitignore  CMakeLists.txt  Challenges.md  Makefile  README.md  STYLE.md  conanfile.txt
Documentation/: IntermediateRepresentation.md
Samples/: TypeConversion.py
Source/: CLI.cc  Commons.cc  Exceptions.cc  Exceptions.hh  Functions.cc  Mamba.cc  Python.cc  Standard.cc
Source/Compiler/: Compiler.hh  Inclusion.hpp  Lexer.cc  Lexer.hh  Linkage.cc  Medium.cc  Parser.cc  Parser.hh
Source/Deduction/: Commons.cc  Inclusion.hpp  Linkage.cc  Medium.cc  Parsing.cc  Semantics.cc  Tokenisation.cc
Source/Execution/: Inclusion.hpp
Source/Interpreter/: Base.cc  Base.hh  Interpreter.hh  Region.cc  Region.hh
Source/Resources/: Base.cc  Base.hh  Region.cc  Region.hh  Stack.cc  Stack.hh
Source/Standard/: Dynamism.cc  Functions.cc  Functions.cpp  Functions.hh  Inclusion.hpp  Standard.hh  Types.cc  math.cc  math.hh  os.hh  random.cc  random.hh  re.hh  string.cc  string.hh  textwrap.hh
Tests/Compiler/: Lexer  Lexer.cc
benchmarks/resource-management/: bibliotheque-benchmarks.cc
include/: IR.hh  context.hh  exceptions.hh  namespaces.hh
include/givers/: memory.hh
include/givers/multithreading/: store.hh
include/os/: async.hh  filesystem.hh
include/types/: Bytes.hh  Complex.hh  Dictionary.hh  Float.hh  Integer.hh  List.hh  Object.hh  Sets.hh  String.hh  Tuple.hh  interfaces.hh
include/types/help/: unicode.hh
src/: IR.cc  context.cc  exceptions.cc
src/givers/: memory.cc
src/givers/GarbageCollectedStack/: ActiveSetMemory.cc  ActiveSetMemory.hh  GarbageBitPage.cc  GarbageBitPage.hh
src/givers/multithreading/: store.cc
src/types/: String.cc
test/givers/: memory-tests.cc
(+5 files in other folders)
